Added new endpoint for getting a job by an id. Started breaking up how queries are formed.
